...
      }
    },
    "Calendar" : {
      "localizations" : {
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ক্যালেন্ডার"
          }
        }
...
      }
    },
    "Charity" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Choose date" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Choose District Manually" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Choose Prayer Location" : {
      "extractionState" : "stale",
      "localizations" : {
...
      "isCommentAutoGenerated" : true
    },
    "Confirm reset counter" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Continue" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Enable Reminder" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Fajr" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "First reminder" : {
      "comment" : "A label for the first reminder date picker.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Insights" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "ISNA" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Loading prayer times…" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Location & Calculation" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Monthly" : {
      "comment" : "Title of a `CharityReminderRepeat` case.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "More" : {
      "localizations" : {
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "আরও"
          }
        }
...
      }
    },
    "Nafl" : {
      "comment" : "Title of a section in the tracker view that lists the user's deeds.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "OK" : {
      "comment" : "A button that dismisses an alert.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Open settings" : {
      "comment" : "A button that opens the app's settings.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Prayer history" : {
      "comment" : "A label for a button that shows a history of prayers.",
      "extractionState" : "stale",
...
      }
    },
    "Prayer Schedule" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Qibla" : {
      "comment" : "A tab that displays a map of the Qibla.",
      "isCommentAutoGenerated" : true,
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "কিবলা"
          }
        }
...
      }
    },
    "Reminders" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Reset counter" : {
      "extractionState" : "stale",
      "localizations" : {
...
      "isCommentAutoGenerated" : true
    },
    "Skip" : {
      "localizations" : {
        "bn" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "সূর্যোদয়"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "সূর্যাস্ত"
          }
        }
...
      }
    },
    "Tasbih" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Tasbih goal completed" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Today" : {
      "localizations" : {
        "bn" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "আজ"
          }
        }
...
      }
    },
    "Tracker" : {
      "comment" : "The title of the tab for tracking prayers and daily deeds.",
      "isCommentAutoGenerated" : true,
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "ট্র্যাকার"
          }
        }
...
      }
    },
    "Tracker section" : {
      "comment" : "The accessibility label for the Tracker section picker.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Use Current Location" : {
      "localizations" : {
        "bn" : {
...
      }
    },
    "Weekly" : {
      "comment" : "Text for a weekly repeat option in a reminder.",
      "isCommentAutoGenerated" : true,
...
